--- a/_includes/redirect.html
+++ b/_includes/redirect.html
@@ -1,12 +1,12 @@
 <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="1; url={{include.redirect}}">
+        <meta http-equiv="refresh" content="1; url={{include.url}}">
         <script type="text/javascript">
-            window.location.href = "{{include.redirect}}"
+            window.location.href = "{{ include.url }}"
         </script>
         <title>Page Redirection</title>
     </head>
     <body>
         <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        If you are not redirected automatically, follow this <a href='{{include.redirect}}'>link to example</a>.
+        If you are not redirected automatically, follow this <a href='{{ include.url }}'>link to {{ include.url }}</a>.
     </body>
