--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,8 +42,11 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.red-blue.min.css">
-    <link rel="stylesheet" href="/css/styles.css">
+    
+	<!-- Sylesheets -->
+	<link rel="stylesheet" href="/css/normalize.css">
+	<link rel="stylesheet" href="/css/material.min.css">
+	  <script src="/js/material.min.js"></scrit>
     <style>
     #view-source {
       position: fixed;
