--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
     <meta name="apple-mobile-web-app-title" content="Material Design Lite">
 
     <!-- Tile icon for Win8 (144x144 + tile color) -->
-    <meta name="msapplication-TileColor" content="#F4336F">
+    <meta name="msapplication-TileColor" content="#Ffc107">
 
 
     <!-- SEO: If your mobile URL is different from the desktop URL, add a canonical link to the desktop page https://developers.google.com/webmasters/smartphone-sites/feature-phones -->
@@ -42,8 +42,7 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.red-blue.min.css">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="{{ site.url }}/css/styles.css">
     <style>
     #view-source {
       position: fixed;
