--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,11 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="/css/normalize.css">
+	<link rel="stylesheet" href="/css/material.min.css">
+	<link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="{{ site.url }}/css/styles.css">
+    
     <style>
     #view-source {
       position: fixed;
